# Glide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MACBOOK_PRO_OPTIMIZATION.md  Makefile  PROXIMITY_IMPROVEMENTS.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-macos.txt  requirements.txt  setup.py  setup_models.py  start_test.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  pr.yml  release.yml
apps/hud-macos/: Info.plist  Package.swift  README.md
configs/: defaults.yaml
dev/: __init__.py
dev/preview/: __init__.py  overlay.py  utils.py
docs/: ARCHITECTURE.md  Api.md  DEPENDENCIES.md  Flow-Diagrams.md  HUD.md  MACOS_SCROLLING_OVERVIEW.md  README.md  Scrolling.md  VelocityScrolling.md  initial-design.md  math.md  touchproof-improvements.md  touchproof.md
docs/UI-UPDATE/: Flow-Diagrams.md  HUD-Implementation-Plan.md  Phase1-Verification.md  Repo-Structure.md
docs/designs/macos-scrolling/: DESIGN.md
docs/learnings/: 2025-01-09-macos-scrolling-planning.md  2025-01-09-poc-simplification.md  2025-09-01-macos-scrolling-design.md
docs/planning/macos-scrolling/: TASKS.md
docs/proposals/: macos-scrolling.md
glide/: __init__.py
glide/app/: main.py
glide/core/: __init__.py  config_models.py  contracts.py  types.py
glide/engine/: pipeline.py
glide/features/: __init__.py  alignment.py  kinematics.py  poses.py
glide/gestures/: __init__.py  circular.py  registry.py  touchproof.py  velocity_controller.py  velocity_tracker.py
glide/io/: __init__.py  config.py  defaults.yaml  event_output.py  replay.py
glide/perception/: camera.py  hands.py  roi.py
glide/runtime/: __init__.py
glide/runtime/actions/: __init__.py  config.py  continuous_scroll.py  quartz_scroll.py  scroll.py  velocity_dispatcher.py
glide/runtime/hud/: __init__.py  legacy_tk_hud.py
glide/runtime/ipc/: __init__.py  ws.py
glide/runtime/ui/: __init__.py  (+1 more)
glide/ui/: __init__.py  overlay.py  utils.py
scripts/: run_with_hud.sh  setup.sh  test.sh
tests/: __init__.py  test_imports.py  test_pyobjc_scroll.py  test_scroll_integration.py  test_scroll_units.py
tools/: test_ws_client.py
web/hud/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
(+16 files in other folders)
